<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"

            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"

            android:layout_marginBottom="20dp"
            android:drawableBottom="@drawable/dinheiro"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inf_sal" />

        <EditText
            android:id="@+id/edit_SB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="digite seu salario bruto"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_dep" />

        <EditText
            android:id="@+id/edit_ND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="quantidade de dependentes"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plano_saude"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/plano_saude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/lista_planos"
                android:spinnerMode="dialog"

                />

        </LinearLayout>

        <TextView

            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_a" />

        <RadioGroup
            android:id="@+id/rgVA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_aS" />

            <RadioButton
                android:id="@+id/naoVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_aN" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_r" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_rS" />

            <RadioButton
                android:id="@+id/naoVR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_rN" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_t" />

        <RadioGroup
            android:id="@+id/rgVT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/simVT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_tS" />

            <RadioButton
                android:id="@+id/naoVT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_tN" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btCalcular"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"

                android:layout_marginRight="20dp"
                android:onClick="Calcular"
                android:text="Calcular"
                android:textColor="#626862" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>