<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ResultadoActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/salL" />

        <TextView
            android:id="@+id/textv_SL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp"

            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/salB" />

        <TextView
            android:id="@+id/textv_SB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/des"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/irrf" />

        <TextView
            android:id="@+id/textv_IRRF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />


        <TextView

            android:id="@+id/vt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plano_saude" />

        <TextView
            android:id="@+id/textv_PS"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inss" />

        <TextView
            android:id="@+id/textv_INSS"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_refeicao" />

        <TextView
            android:id="@+id/t_vR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_alimentacao" />

        <TextView
            android:id="@+id/t_vA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_transporte" />

        <TextView
            android:id="@+id/t_vT"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style"
            android:ems="10"
            android:inputType="textPersonName"

            android:textAlignment="center"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btfinal"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"

            android:onClick="finalizar"
            android:text="Finalizar"
            android:textColor="#626862" />

    </LinearLayout>
</ScrollView>


